# spotter_ai

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
core/api/: urls.py  views.py
core/api/serializers/: routs.py
core/api/tests/: test_find_route.py  test_route_api.py
core/api/utils/: find_routes.py  load_csv.py  map_link.py  station_filter.py  station_optimality_with_ml.py
core/fuel/: admin.py  models.py
core/fuel/management/commands/: csv_lat_long_addition.py  ml_fuel_price_optimality.py
core/fuel/utils/: fuel_stop_model.pkl  update_fuel-prices-for-be-assessment.csv
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: __init__.py  admin_template_config.py  api.py  base.py  development.py  general_security.py  production.py  utils_config.py
core/project/settings/django/: filters.py
core/project/settings/jinja/: env.py
core/project/settings/middleware/: current_request.py  custom_csp.py
core/project/settings/unfold/: badge.py  context.py  env.py  permissions.py
core/project/static/assets/css/unfold/: style.css
core/project/static/assets/img/: logo.jfif
core/project/utils/: api_setup.py
core/templates/admin/: index.html
core/templates/admin/auth/user/: add_form.html
core/templates/unfold/layouts/: base.html
core/user/: admin.py
core/user/utils/admin/: register_defender.py  register_groups.py  register_sites.py
